@@ -85,6 +85,7 @@ GW_DEFAULT["target_BUFFS"] = true
 GW_DEFAULT["target_BUFFS_FILTER"] = true
 GW_DEFAULT["target_BUFFS_FILTER_ALL"] = false
 GW_DEFAULT["target_ILVL"] = false
+GW_DEFAULT["target_THREAT_VALUE_ENABLED"] = false
 
 GW_DEFAULT["focus_TARGET_ENABLED"] = true
 GW_DEFAULT["focus_DEBUFFS"] = true
